blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Household__c/Client_Household__c.object-meta.xml
<CustomObject>
    <description>A client unit, one person or a couple or family, that the practice advises together. Holds the service terms, risk profile and review dates. People link to it, so each human keeps one record.</description>
    <label>Household</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Households</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>