blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Household__c/fields/Agreement_date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_date__c</fullName>
    <description>Date the client agreement was signed. Starts the service.</description>
    <label>Agreement date</label>
    <type>Date</type>
</CustomField>