blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Household__c/fields/Annual_fee__c.field-meta.xml
<CustomField>
    <fullName>Annual_fee__c</fullName>
    <description>Expected ongoing fee per year. Used to forecast recurring income.</description>
    <label>Annual ongoing fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>