blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Household__c/fields/Assets_under_advice_band__c.field-meta.xml
<CustomField>
    <fullName>Assets_under_advice_band__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>DATA PROTECTION: personal financial data. Banded size of assets advised on. Used for tiering and fee reporting without storing exact balances.</description>
    <label>Assets under advice band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under 100k</fullName>
            </value>
            <value>
                <fullName>100k to 250k</fullName>
            </value>
            <value>
                <fullName>250k to 500k</fullName>
            </value>
            <value>
                <fullName>500k to 1m</fullName>
            </value>
            <value>
                <fullName>Over 1m</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>