blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Household__c/fields/Attitude_to_risk__c.field-meta.xml
<CustomField>
    <fullName>Attitude_to_risk__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>DATA PROTECTION: personal financial data. The risk level agreed with the client from the practice's risk questionnaire. Reconfirmed at each review.</description>
    <label>Attitude to risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cautious</fullName>
            </value>
            <value>
                <fullName>Cautious to balanced</fullName>
            </value>
            <value>
                <fullName>Balanced</fullName>
            </value>
            <value>
                <fullName>Balanced to adventurous</fullName>
            </value>
            <value>
                <fullName>Adventurous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>