blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Household__c/fields/Capacity_for_loss__c.field-meta.xml
<CustomField>
    <fullName>Capacity_for_loss__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>DATA PROTECTION: personal financial data. How much loss the household could bear without harm to its standard of living. Assessed separately from attitude to risk.</description>
    <label>Capacity for loss</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>