blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Household__c/fields/Last_review_date__c.field-meta.xml
<CustomField>
    <fullName>Last_review_date__c</fullName>
    <description>Date of the most recent completed review. Set by automation.</description>
    <label>Last review date</label>
    <type>Date</type>
</CustomField>