blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Household__c/fields/Lead_adviser__c.field-meta.xml
<CustomField>
    <fullName>Lead_adviser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The adviser responsible for the household.</description>
    <label>Lead adviser</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Households Lead adviser</relationshipLabel>
    <relationshipName>Client_Household_Lead_adviser</relationshipName>
    <type>Lookup</type>
</CustomField>