blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Household__c/fields/Next_review_date__c.field-meta.xml
<CustomField>
    <fullName>Next_review_date__c</fullName>
    <description>Date the next review is due. Set from the last review date and frequency. Drives the review cycle.</description>
    <label>Next review date</label>
    <type>Date</type>
</CustomField>