blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Household__c/fields/Referred_by__c.field-meta.xml
<CustomField>
    <fullName>Referred_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows which professional introducer brought each household, for referral reporting.</description>
    <label>Referred by</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Households referred</relationshipLabel>
    <relationshipName>Households_referred</relationshipName>
    <type>Lookup</type>
</CustomField>