blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Household__c/fields/Review_frequency__c.field-meta.xml
<CustomField>
    <fullName>Review_frequency__c</fullName>
    <description>How often the household is reviewed under its service agreement.</description>
    <label>Review frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Six-monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>As needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>