blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Household__c/fields/Service_tier__c.field-meta.xml
<CustomField>
    <fullName>Service_tier__c</fullName>
    <description>The level of service the household pays for. Sets review frequency and who attends.</description>
    <label>Service tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Essential</fullName>
            </value>
            <value>
                <fullName>One-off advice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>