blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Household__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Where the household is with the practice.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Ongoing client</fullName>
            </value>
            <value>
                <fullName>One-off client</fullName>
            </value>
            <value>
                <fullName>Former client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>