blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Household__c/listViews/Households_by_tier.listView-meta.xml
<ListView>
    <fullName>Households_by_tier</fullName>
    <columns>NAME</columns>
    <columns>Service_tier__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ongoing client</value>
    </filters>
    <label>Households by service tier</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>