blueprints/financial-advisers/salesforce/force-app/main/default/objects/Client_Household__c/listViews/Reviews_due_90_days.listView-meta.xml
<ListView>
    <fullName>Reviews_due_90_days</fullName>
    <columns>NAME</columns>
    <columns>Next_review_date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ongoing client</value>
    </filters>
    <filters>
        <field>Next_review_date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Next_review_date__c</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_DAYS:90</value>
    </filters>
    <label>Reviews due in 90 days</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>